--- a/index.html
+++ b/index.html
@@ -1,164 +1,139 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Live Sports</title>
+    <title>Advanced Live Sports Streaming</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
             background-color: #f8f9fa;
         }
-
-        .score-card {
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        .stream-container {
+            margin-top: 20px;
+        }
+        .video-player {
+            width: 100%;
+            max-height: 500px;
+            border: 2px solid #000;
             border-radius: 10px;
-            margin: 20px 0;
         }
-
-        .live-indicator {
-            color: white;
-            background-color: red;
-            padding: 2px 8px;
-            border-radius: 4px;
-            font-size: 0.9rem;
-        }
-
-        .refresh-btn {
-            margin-top: 20px;
-        }
-
-        .details {
+        .controls {
             margin-top: 10px;
-            font-size: 0.9rem;
-            color: #6c757d;
         }
-
-        .search-bar {
-            margin-bottom: 20px;
+        .social-buttons button {
+            margin-right: 10px;
         }
-
-        .social-share {
-            display: flex;
-            justify-content: center;
-            margin-top: 20px;
+        .comments-section {
+            margin-top: 30px;
+            background: #fff;
+            padding: 15px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
-
-        .social-share button {
-            margin: 0 10px;
+        .comment {
+            margin-bottom: 15px;
+        }
+        .comment-author {
+            font-weight: bold;
         }
     </style>
 </head>
-
 <body>
-    <div class="container py-4">
-        <header class="text-center mb-4">
-            <h1>Live Sports Updates</h1>
+    <div class="container">
+        <header class="text-center my-4">
+            <h1>Advanced Live Sports Streaming</h1>
+            <p class="lead">Broadcast live sports events to various platforms seamlessly</p>
         </header>
 
-        <!-- Search Bar -->
-        <div class="search-bar text-center">
-            <input type="text" id="search" class="form-control w-50 mx-auto" placeholder="Search teams or matches..." oninput="filterMatches()">
+        <div class="stream-container">
+            <div class="video-container">
+                <video id="liveStream" class="video-player" controls autoplay>
+                    <source src="live-stream-url.mp4" type="video/mp4">
+                    Your browser does not support HTML5 video.
+                </video>
+            </div>
+
+            <div class="controls text-center">
+                <button class="btn btn-primary" onclick="startStreaming()">Start Streaming</button>
+                <button class="btn btn-danger" onclick="stopStreaming()">Stop Streaming</button>
+                <button class="btn btn-warning" onclick="pauseStreaming()">Pause</button>
+            </div>
+
+            <div class="social-sharing mt-4">
+                <h5>Share to Social Platforms:</h5>
+                <div class="social-buttons">
+                    <button class="btn btn-primary" onclick="shareToPlatform('Facebook')">Facebook</button>
+                    <button class="btn btn-info" onclick="shareToPlatform('Twitter')">Twitter</button>
+                    <button class="btn btn-danger" onclick="shareToPlatform('YouTube')">YouTube</button>
+                    <button class="btn btn-dark" onclick="shareToPlatform('Instagram')">Instagram</button>
+                </div>
+            </div>
+
+            <div class="comments-section mt-4">
+                <h5>Real-Time Comments</h5>
+                <div id="comments">
+                    <!-- Comments will be dynamically added here -->
+                </div>
+                <div class="input-group mt-3">
+                    <input type="text" id="commentInput" class="form-control" placeholder="Write a comment...">
+                    <button class="btn btn-primary" onclick="addComment()">Submit</button>
+                </div>
+            </div>
         </div>
 
-        <!-- Live Match Section -->
-        <div id="live-matches" class="row">
-            <!-- Dynamic Match Cards Will Be Injected Here -->
-        </div>
-
-        <div class="text-center">
-            <button class="btn btn-primary refresh-btn" onclick="fetchLiveScores()">Refresh Scores</button>
-        </div>
-
-        <!-- Social Share Buttons -->
-        <div class="social-share">
-            <button class="btn btn-outline-primary" onclick="shareOnPlatform('facebook')">Share on Facebook</button>
-            <button class="btn btn-outline-info" onclick="shareOnPlatform('twitter')">Share on Twitter</button>
-            <button class="btn btn-outline-danger" onclick="shareOnPlatform('youtube')">Go Live on YouTube</button>
-        </div>
+        <footer class="text-center mt-5">
+            <p>&copy; 2025 Advanced Sports Streaming. All rights reserved.</p>
+        </footer>
     </div>
 
     <script>
-        // Simulated Live Data (Replace with real API call)
-        let matches = [];
+        function startStreaming() {
+            const video = document.getElementById('liveStream');
+            video.play();
+            alert('Streaming Started!');
+        }
 
-        const fetchLiveScores = async () => {
-            // Simulating API call with static data
-            matches = [
-                {
-                    id: 1,
-                    teams: "Team A vs Team B",
-                    score: "120/3 (12.3 Overs)",
-                    status: "Live",
-                    details: "Team A is chasing a target of 180."
-                },
-                {
-                    id: 2,
-                    teams: "Team C vs Team D",
-                    score: "80/2 (8 Overs)",
-                    status: "Live",
-                    details: "Team D is batting first."
-                },
-                {
-                    id: 3,
-                    teams: "Team E vs Team F",
-                    score: "Match Starts at 4:00 PM",
-                    status: "Upcoming",
-                    details: "Venue: Stadium XYZ."
-                }
-            ];
+        function stopStreaming() {
+            const video = document.getElementById('liveStream');
+            video.pause();
+            video.currentTime = 0;
+            alert('Streaming Stopped!');
+        }
 
-            renderMatches(matches);
-        };
+        function pauseStreaming() {
+            const video = document.getElementById('liveStream');
+            video.pause();
+            alert('Streaming Paused!');
+        }
 
-        const renderMatches = (matches) => {
-            const matchesContainer = document.getElementById("live-matches");
-            matchesContainer.innerHTML = ""; // Clear existing content
+        function shareToPlatform(platform) {
+            const streamURL = 'https://example.com/live-stream'; // Replace with actual URL
+            window.open(`https://www.${platform.toLowerCase()}.com/share?url=${encodeURIComponent(streamURL)}`, '_blank');
+        }
 
-            matches.forEach(match => {
-                const matchCard = document.createElement("div");
-                matchCard.className = "col-md-4 score-card p-3 bg-white";
-                matchCard.innerHTML = `
-                    <div class="card-body">
-                        <h5 class="card-title">${match.teams}</h5>
-                        <p class="card-text">${match.score}</p>
-                        ${match.status === "Live" ? `<span class='live-indicator'>Live</span>` : ""}
-                        <p class="details">${match.details}</p>
-                    </div>
+        function addComment() {
+            const commentInput = document.getElementById('commentInput');
+            const commentText = commentInput.value.trim();
+
+            if (commentText) {
+                const comments = document.getElementById('comments');
+                const newComment = document.createElement('div');
+                newComment.classList.add('comment');
+
+                newComment.innerHTML = `
+                    <p class="comment-author">User:</p>
+                    <p>${commentText}</p>
                 `;
-                matchesContainer.appendChild(matchCard);
-            });
-        };
 
-        const filterMatches = () => {
-            const query = document.getElementById("search").value.toLowerCase();
-            const filteredMatches = matches.filter(match => match.teams.toLowerCase().includes(query));
-            renderMatches(filteredMatches);
-        };
-
-        const shareOnPlatform = (platform) => {
-            const url = window.location.href; // Current page URL
-            switch (platform) {
-                case 'facebook':
-                    window.open(`https://www.facebook.com/sharer/sharer.php?u=${encodeURIComponent(url)}`, '_blank');
-                    break;
-                case 'twitter':
-                    window.open(`https://twitter.com/intent/tweet?url=${encodeURIComponent(url)}&text=Check out live sports updates!`, '_blank');
-                    break;
-                case 'youtube':
-                    alert('To go live on YouTube, integrate YouTube Live API with your application.');
-                    break;
-                default:
-                    alert('Invalid platform selected.');
+                comments.appendChild(newComment);
+                commentInput.value = '';
+            } else {
+                alert('Please write a comment before submitting.');
             }
-        };
-
-        // Fetch scores on page load
-        window.onload = fetchLiveScores;
+        }
     </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
 </html>
