--- a/index.html
+++ b/index.html
@@ -97,8 +97,22 @@
     </div>
 
     <script>
-        function startStreaming() {
-            alert('Streaming Started!');
+        const YOUTUBE_API_KEY = 'YOUR_API_KEY'; // Replace with your API Key
+        const YOUTUBE_CHANNEL_ID = 'YOUR_CHANNEL_ID'; // Replace with your Channel ID
+
+        async function startStreaming() {
+            const response = await fetch(`https://www.googleapis.com/youtube/v3/liveBroadcasts?part=snippet,status&broadcastType=persistent&key=${YOUTUBE_API_KEY}`);
+            const data = await response.json();
+
+            if (data.items && data.items.length > 0) {
+                const broadcast = data.items[0];
+                alert(`Streaming started: ${broadcast.snippet.title}`);
+
+                const iframe = document.getElementById('liveStream');
+                iframe.src = `https://www.youtube.com/embed/${broadcast.id}`;
+            } else {
+                alert('No active broadcasts found. Please create one in YouTube Studio.');
+            }
         }
 
         function stopStreaming() {
